# SQL_Workshop

./: .gitignore  CMakeLists.txt  IAccountingSystem.hpp  accounting_system.cpp  accounting_system.hpp  sqlite_demo.cpp
doc/: mybeamerdark.sty  presentation.tex
test_data/: make_dump.sql
